--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "nodeocr",
     "version": "1.0.0",
     "description": "node ocr for google",
-    "main": "index.js",
+    "main": "server.js",
     "dependencies": {
         "express": "^4.15.2",
         "formidable": "^1.1.1",
